fix typo in part1/introduction and add part1/contents

--- a/part1/introduction.tex
+++ b/part1/introduction.tex
@@ -31,7 +31,7 @@
 		
 		\begin{description}
 			\item[Wikipedia(日本語版) - ラムダ計算] : \url{https://ja.wikipedia.org/wiki/ラムダ計算}
-			\item[Wikipedia(English - Lambda calculus] \url(https://en.wikipedia.org/wiki/Lambda_calculus)
+			\item[Wikipedia(English) - Lambda calculus] \url{https://en.wikipedia.org/wiki/Lambda_calculus}
 		\end{description}
 
 	}
