チューリングマシンについて書いている途中

--- a/part1/introduction.tex
+++ b/part1/introduction.tex
@@ -32,6 +32,8 @@
 		\begin{description}
 			\item[Wikipedia(日本語版) - ラムダ計算] : \url{https://ja.wikipedia.org/wiki/ラムダ計算}
 			\item[Wikipedia(English) - Lambda calculus] \url{https://en.wikipedia.org/wiki/Lambda_calculus}
+			\item[通信用語の基礎知識 - チューリングマシン] \url{http://www.wdic.org/w/TECH/チューリングマシン}
+			\item[通信用語の基礎知識 - チューリングコンプリート] \url{http://www.wdic.org/w/TECH/チューリングコンプリート}
 		\end{description}
 
 	}
