--- a/part2/summary.tex
+++ b/part2/summary.tex
@@ -4,13 +4,14 @@
 		ラムダ算法と呼ばれることもある。また、ラムダ計算という名前は、関数を抽象化して表現する式にλ(ラムダ)を用いるという慣例に由来する。
 		また、ラムダ計算には「型なしラムダ計算」と「型付きラムダ計算」という2つの体系が存在するが、本書では基本的に明示しないかぎり、「ラムダ計算」は「型付きラムダ計算」を意味するものとする。「型付きラムダ計算」についての本書の扱いについては1章に書いたのでそちらを参照してもらいたい。\\
 		\\
-		ラムダ計算は{\bf 1つの変換規則(変数置換)と、1つの関数定義の規則のみをもつ、最小の(ユニバーサルな)プログラミング言語}として捉えることもできる。ここでの「ユニバーサルな」とは、すべての計算可能な関数\footnote{計算可能性については後に説明する}が表現でき、正しく評価されるという意味である。これは、ラムダ計算がチューリングマシンと等価な数理モデルであることを意味している。ラムダ計算がチューリングマシンと等価な数理モデルであることは、「ラムダ計算はチューリング完全である」\footnote{チューリング完全は、チューリングコンプリートとも言う}と言い換えることができる。\\
+		ラムダ計算は{\bf 「1つの変換規則(変数置換)と、1つの関数定義の規則のみをもつ、最小の(ユニバーサルな)プログラミング言語」}として捉えることもできる。ここでの「ユニバーサルな」とは、すべての計算可能な関数\footnote{計算可能性については後に説明する}が表現でき、正しく評価されるという意味である。これは、ラムダ計算がチューリングマシンと等価な数理モデルであることを意味している。ラムダ計算がチューリングマシンと等価な数理モデルであることは、「ラムダ計算はチューリング完全である」\footnote{チューリング完全は、チューリングコンプリートとも言う}と言い換えることができる。\\
 		なお、チューリングマシンとチューリング完全についてはこの部の末章で説明する. \\
 		\\
 		ラムダ計算がチューリングマシンと等価な数理モデルであることは後に説明する不動点コンビネータを用いることで、ラムダ計算の範囲内で関数の再帰\footnote{再帰とは、ある関数$f$がその関数のなかで、自分自身、すなわち関数$f$を呼び出すことである}が可能になる。、これがループと等価な効果をもたらす。\\
 		ただし、再帰によるループの実現を汎用的なプログラミング言語を用いて実装る場合には一つ注意すべきことが存在する。それはチューリングマシンがループを行う場合、無限回(または膨大な回数)のループが発生してもループが原因で処理不可能ということは起こらない。しかし、再帰の場合、関数を呼び出すと関数のローカル変数(引数や局所変数)や戻り先情報を保持するスタックフレームが生成されコールスタックと呼ばれるスタックにpushされていく。従って、その回数が大きくなるとスタックオーバーフローを起こしてしまう可能性があり、再帰には限界がある。従って、それを避けるために再帰は末尾再帰にすべきである。
 	}
-
+	%歴史
+	%	ラムダ計算は{\bf アロンゾ・チャーチ}\footnote{アメリカの論理学者, 数学者。ラムダ計算の創始者}と{\bf スティーヴン・コール・クリーネ}\footnote{アメリカの数学者。}
 }
 
 \chapter{チューリングマシンとチューリング完全}{
