--- a/part1/introduction.tex
+++ b/part1/introduction.tex
@@ -17,7 +17,7 @@
 			\end{description}
 		}
 	}
-	
+
 	\section{対象とする読者}{
 		筆者はラムダ計算に興味を持っている素人に過ぎず、ラムダ計算や計算機科学についての専門家ではない。それゆえ、この文章が学習にとって適しているかどうかも判断出来かねる。
 		従って、本書がどのような読者にとって理解可能なものであるかもわからない。
@@ -25,16 +25,16 @@
 		対象とする読者に求める能力/知識については分からないが、少なくとも、何らかのプログラミング言語に関する知識やPCの動作原理に興味とラムダ計算を学習する意欲を持っている方であればなんとかなるだろう。
 		また、本質的ではないので、本書中のプログラムのコードなどについての解説はしばしば省略するので、それについては読者が各自で理解していただきたい。
 	}
-	
+
 	\section{参考資料}{
 		本書を執筆するにあたり、下に示す資料を参考にした。実際に参照した資料はまだまだ多いのだが、そのすべてを把握することはできていないため、これらは一部である。
-		
-		\begin{description}
-			\item[Wikipedia(日本語版) - ラムダ計算] : \url{https://ja.wikipedia.org/wiki/ラムダ計算}
-			\item[Wikipedia(English) - Lambda calculus] \url{https://en.wikipedia.org/wiki/Lambda_calculus}
-			\item[通信用語の基礎知識 - チューリングマシン] \url{http://www.wdic.org/w/TECH/チューリングマシン}
-			\item[通信用語の基礎知識 - チューリングコンプリート] \url{http://www.wdic.org/w/TECH/チューリングコンプリート}
-		\end{description}
+
+		\begin{thebibliography}{9}
+			\bibitem{wikiJ}Wikipedia(日本語版) - ラムダ計算 : \url{https://ja.wikipedia.org/wiki/ラムダ計算}
+			\bibitem{wikiE}[Wikipedia(English) - Lambda calculus] \url{https://en.wikipedia.org/wiki/Lambda_calculus}
+			\bibitem{machine}通信用語の基礎知識 - チューリングマシン \url{http://www.wdic.org/w/TECH/チューリングマシン}
+			\bibitem{complete}通信用語の基礎知識 - チューリングコンプリート \url{http://www.wdic.org/w/TECH/チューリングコンプリート}
+		\end{thebibliography}
 
 	}
 }
